--- a/package.json
+++ b/package.json
@@ -4,22 +4,28 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "jest"
+    "test": "mocha --compilers js:babel/register",
+    "tsfiles": "git ls-files | grep '.ts$'"
   },
   "dependencies": {
+    "action-type": "^3.1.1",
+    "hoe": "^8.0.0",
+    "match-action": "^1.0.4",
+    "ramda": "^0.25.0",
     "react": "16.3.1",
-    "react-native": "0.55.4"
+    "react-native": "0.55.4",
+    "react-navigation": "^2.5.5",
+    "update-function-types": "^2.0.2"
   },
   "devDependencies": {
+    "@types/chai": "^4.1.2",
+    "@types/mocha": "^5.0.0",
     "@types/react": "^16.4.4",
     "@types/react-native": "^0.55.26",
-    "babel-jest": "23.0.1",
-    "babel-preset-react-native": "4.0.0",
-    "jest": "23.1.0",
-    "react-test-renderer": "16.3.1",
+    "chai": "^4.1.1",
+    "ignore-styles": "^5.0.1",
+    "mocha": "^5.0.0",
+    "ts-node": "^6.1.0",
     "typescript": "^2.9.2"
-  },
-  "jest": {
-    "preset": "react-native"
   }
 }
