--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node node_modules/react-native/local-cli/cli.js start",
-    "test": "mocha --require=ts-node/register $(npm run -s tsfiles | grep \\.test\\.ts$)",
-    "tsfiles": "git ls-files | grep '.ts$'"
+    "test": "mocha src/components/**/test/*.js",
+    "test:app": "jest"
   },
   "dependencies": {
     "action-type": "^3.1.1",
@@ -22,10 +22,17 @@
     "@types/mocha": "^5.0.0",
     "@types/react": "^16.4.4",
     "@types/react-native": "^0.55.26",
+    "babel-jest": "23.0.1",
+    "babel-preset-react-native": "4.0.0",
     "chai": "^4.1.1",
     "ignore-styles": "^5.0.1",
+    "jest": "23.1.0",
     "mocha": "^5.0.0",
+    "react-test-renderer": "16.3.1",
     "ts-node": "^6.1.0",
     "typescript": "^2.9.2"
+  },
+  "jest": {
+    "preset": "react-native"
   }
 }
